Flatten entire source hierarchy